syntax = "proto3";
package grpc;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service GrpcTest {
  rpc Hello (HelloRequest) returns (HelloResponse);
}
